<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="8dp"
        app:cardElevation="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_boat"
                android:contentDescription="@string/app_name"
                />
            <TextView
                android:id="@+id/postTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_title"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/postDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_description"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/purple_500"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/likeButton"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_baseline_shopping_cart_24"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    app:iconTint="@color/purple_200"/>
            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>




</LinearLayout>